tests/macros/editor/page_size.stderr
error: option `page_size` does not exist for kind `editor`
 --> $DIR/page_size.rs:2:36
  |
2 |     requestty::questions![Editor { page_size: todo!() }];
  |                                    ^^^^^^^^^
