tests/macros/editor/page_size.rs
fn main() {
    requestty::questions![Editor { page_size: todo!() }];
}
